chore: bump papermod theme, update configs

--- a/config.yml
+++ b/config.yml
@@ -5,17 +5,17 @@ theme: 'PaperMod'
 
 
 menu:
-    main:
-        - name: CV
-          url: cv
-          weight: 5
-        - name: Blog
-          url: posts/
-          weight: 10
-        - name: GitHub
-          url: https://github.com/paolofacchinetti/
-        - name: Linkedin
-          url: https://www.linkedin.com/in/paolofacchinetti/
+  main:
+  - name: CV
+    url: cv
+    weight: 5
+  - name: Blog
+    url: posts/
+    weight: 10
+  - name: GitHub
+    url: https://github.com/paolofacchinetti/
+  - name: Linkedin
+    url: https://www.linkedin.com/in/paolofacchinetti/
 
 languages:
     en:
@@ -23,26 +23,28 @@ languages:
         weight: 1
 
 params:
-    env: production
-    description: "Paolo Facchinetti's website"
-    author: Paolo Facchinetti
-    displayFullLangName: true
-    ShowPostNavLinks: true
-    ShowBreadCrumbs: true
-    ShowCodeCopyButtons: true
-    ShowRssButtonInSectionTermList: true
-    ShowToc: true
+  env: production
+  description: "Paolo Facchinetti's website"
+  author: Paolo Facchinetti
+  displayFullLangName: true
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: true
+  ShowRssButtonInSectionTermList: true
+  ShowToc: true
+  hideFooter: true
 
-    profileMode:
-      enabled: true
-      title: 'Paolo Facchinetti'
-      imageUrl: "https://avatars.githubusercontent.com/u/51409747"
-      imageTitle: paolofacchinetti
-      # imageWidth: 120
-      # imageHeight: 120
-      subtitle: "developer focused on DevOps, Cloud and Web3"
-      buttons:
-          - name: CV
-            url: cv
-          - name: Blog
-            url: posts
+  assets:
+    favicon: "/favicon.ico"
+
+  profileMode:
+    enabled: true
+    title: 'Paolo Facchinetti'
+    imageUrl: "https://avatars.githubusercontent.com/u/51409747"
+    imageTitle: paolofacchinetti
+    subtitle: "Software Engineer focused on DevOps and Crypto"
+    buttons:
+    - name: CV
+      url: cv
+    - name: Blog
+      url: posts
